<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kessr.saphackathon.CreateAccount"
    android:orientation="vertical"
    android:background="@color/azur">

    <android.support.v7.widget.CardView
        android:layout_margin="30dp"
        app:cardCornerRadius="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/welcome_to_sap_after_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/userFullName"
                android:hint="@string/full_name"
                android:layout_marginTop="20dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>
            <EditText
                android:id="@+id/userEmail"
                android:hint="@string/email_address"
                android:layout_marginTop="20dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/userPassword"
                android:hint="@string/password"
                android:layout_marginTop="20dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/userHomeAddress"
                android:hint="@string/home_address"
                android:layout_marginTop="20dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="textPostalAddress"/>
            <EditText
                android:id="@+id/userINumber"
                android:hint="@string/INumber"
                android:layout_marginTop="20dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
            <EditText
                android:id="@+id/userTeam"
                android:hint="@string/sap_team"
                android:layout_marginTop="20dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
            <Button
                android:id="@+id/signUpButton"
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="signUpUser"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>